--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Root logger option
-log4j.rootLogger=  stdout,file
+log= /user/home/log4j
+log4j.rootLogger=  info,file
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -8,8 +9,11 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=E:\\Mylog\\sys_test.log
+log4j.appender.file.File=E:/Mylog/log_test.log
+
+# Define the layout for file appender
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=1
+
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
